Added grpc types registration, so they are actually used. Updated integration test to follow the prescribed schema Adjusted related tests and modules accordingly.

--- a/integration_test/mev_module/mev_test.yaml
+++ b/integration_test/mev_module/mev_test.yaml
@@ -1,15 +1,20 @@
 - name: Test MEV Module
-  steps:
+  inputs:
     - name: Submit Bundle
       cmd: |
-        printf "12345678\n" | seid tx mev submit-bundle '["tx1","tx2"]' 100 \
+        printf "12345678\n" | seid tx mev submit-bundle "[\"a29rbw==\", \"Y3dpcg==\"]" 100 \
           --from node_admin --chain-id sei --fees 2000usei -b block -y
-      expected:
-        code: 0
+      env: SUBMIT_BUNDLE
 
-    - name: Query Pending Bundles
-      cmd: seid query mev pending-bundles
-      expected:
-        contains: 
-          - "tx1"
-          - "tx2" 
+#    - name: Query Pending Bundles
+#      cmd: seid query mev pending-bundles
+#      env: QUERY_BUNDLE
+
+
+  verifiers:
+#      # Add comments for what should the expected result
+      - type: eval
+        expr: SUBMIT_BUNDLE == ""
+#      - type: regex
+#        result: RESULT
+#        expr: <Replace with regular expression>
