--- a/integration_test/mev_module/mev_test.yaml
+++ b/integration_test/mev_module/mev_test.yaml
@@ -1,24 +1,22 @@
 - name: Test MEV Module
   inputs:
     - name: Query Pending Bundles
-      cmd: seid query mev pending-bundles
+      cmd: seid mev pending-bundles --output json | jq ".bundles | length"
       env: QUERY_BUNDLE_EMPTY
     - name: Submit Bundle
       cmd: |
-        printf "12345678\n" | seid tx mev submit-bundle "[\"a29rbw==\", \"Y3dpcg==\"]" 100 \
-          --from node_admin --chain-id sei --fees 2000usei -b block -y
+        seid mev submit-bundle --output json "[\"a29rbw==\", \"Y3dpcg==\"]" 100 | jq .success
       env: SUBMIT_BUNDLE
-
     - name: Query Pending Bundles
-      cmd: seid query mev pending-bundles
+      cmd: seid mev pending-bundles --output json | jq ".bundles | length"
       env: QUERY_BUNDLE_ONE
 
 
   verifiers:
 #      # Add comments for what should the expected result
       - type: eval
-        expr: QUERY_BUNDLE_EMPTY == ""
+        expr: QUERY_BUNDLE_EMPTY == 0
       - type: eval
-        expr: SUBMIT_BUNDLE == ""
+        expr: SUBMIT_BUNDLE == "true"
       - type: eval
-        expr: QUERY_BUNDLE_ONE == ""
+        expr: QUERY_BUNDLE_ONE == 1
